# MCD

./: README.md
Semestre 1/Gestion Estrategica/what-if/: HOWTO.md  README.md  pyproject.toml
Semestre 1/Gestion Estrategica/what-if/ML/: RF.ipynb  mejor_modelo_regresion.pkl  predicciones_0.csv  report.html
Semestre 1/Gestion Estrategica/what-if/ML/.ipynb_checkpoints/: RF-checkpoint.ipynb  predicciones_1-checkpoint.csv  report.html
Semestre 1/Gestion Estrategica/what-if/ML/data/: cleaned_hotel_prices.csv  data_ok.csv  data_training.csv  hotel_prices.csv
Semestre 1/Gestion Estrategica/what-if/data/: combined_flight_and_hotel_data.csv  overall_flight_prices.csv  overall_hotel_prices.csv  sample_HC_data.csv  sample_tne_data_flights_and_hotel_combined.csv
Semestre 1/Gestion Estrategica/what-if/demos/: 01-travel-and-expense-multiple-travelers.py  02-hc-expenses-multiple-records-same-team.py
Semestre 1/Gestion Estrategica/what-if/scenarios/: scenario1.json  scenario2.json  scenario3.json  scenario4.json  scenario5.json  scenario6.json  scenario7.json
Semestre 1/Gestion Estrategica/what-if/src/tests/: brute_force_general_test.py  json_utils_test.py  keep_n_test.py  param_utils_test.py  scenarios_test.py
Semestre 1/Gestion Estrategica/what-if/src/tests/test_data/: all_combinations.csv
Semestre 1/Gestion Estrategica/what-if/src/what_if/: brute_force_general.py  keep_n.py  param_utils.py
Semestre 1/Gestion Estrategica/what-if/src/what_if/tne/: README.md  annealing_algorithm.py  config.py  cost_function.py  custom_exceptions.py  genetic_algorithm.py  json_utils.py  (+8 more)
(+83 files in other folders)
