[tool.poetry]
name = "what_if"
version = "0.1.0"
description = ""
authors = ["Leonardo Talero <leonardo_talero@epam.com>"]
readme = "README.md"
packages = [
  { include = "what_if", from = "src" }
]

[tool.poetry.dependencies]
python = "3.10.10"
fastapi = "0.110.0"
httpx = "0.27.0"
uvicorn = "0.28.0"
pandas = "2.1.4"
scikit-learn = "1.4.2"
openpyxl = "3.0.10"
tqdm = "4.66.2"
pydantic = "1.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-mock = "3.14.0"
pdoc3 = "0.10.0"
pylint = "3.1.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
